Tue Apr  7 13:14:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBRUBY_DLDFLAGS): compatibility version is
	  ruby_version.

	* configure.in (RUBY_REPLACE_TYPE): defines type modifier prefix
	  for printf.

Tue Apr  7 02:27:49 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_DEFINT): should pass includes to
	  AC_CHECK_SIZEOF and RUBY_CHECK_SIZEOF.

	* configure.in (CFLAGS, CXXFLAGS): need ARCH_FLAG for universal
	  binary.

Tue Apr  7 01:08:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_to_s): reduce fragments if no precision lost.
	  c.f. [ruby-core:23075]

Mon Apr  6 23:16:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (CFLAGS, CXXFLAGS): override with $cflags and
	  $cxxflags if not given.  [ruby-core:23130]

Mon Apr  6 19:26:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (utime_failed): refined the error message for EINVAL on
	  DOSISH platforms, where it may fail depending on filesystems.
	  see [ruby-dev:38277].

Mon Apr  6 16:38:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (sys_fail2, rb_file_s_readlink, BUFCHECK, rmext),
	  (rb_file_s_basename): get rid of overflow.

Mon Apr  6 15:11:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (int_chr): checsk overflow.

Mon Apr  6 10:49:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/stringio/test_stringio.rb (test_path): StringIO#path is no
	  longer defined.  [ruby-dev:38254]

Mon Apr  6 10:47:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_path): removed.  [ruby-dev:38254]

Sun Apr  5 18:02:54 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_fd_resize): does nothing on Win32.

Sat Apr  4 17:05:15 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (RB_NUM_COERCE_FUNCS_NEED_OPID): macro to
	  check compatibility.  [ruby-dev:38162]

Sat Apr  4 07:38:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
